--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMeals User Registeration</title>
     <link rel="stylesheet" href="/assets/base.css?v2">
-    <link rel="stylesheet" href="/assets/style.css?bt">
+    <link rel="stylesheet" href="style.css?bt">
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <link rel="preload" href="https://lottie.host/0bce2892-f33a-4e03-8723-084484b362c7/sDnHjQ79oG.json" as="fetch"
         type="application/json" crossorigin="anonymous">
