--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMeals User Registeration</title>
-    <link rel="stylesheet" href="/assets/base.css?v2">
-    <link rel="stylesheet" href="style.css?bt">
+    <link rel="stylesheet" href="assets/base.css?v2">
+    <link rel="stylesheet" href="assets/style.css?bdhthftt">
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
-    <link rel="preload" href="https://lottie.host/0bce2892-f33a-4e03-8723-084484b362c7/sDnHjQ79oG.json" as="fetch"
+    <!-- <link rel="preload" href="https://lottie.host/0bce2892-f33a-4e03-8723-084484b362c7/sDnHjQ79oG.json" as="fetch"
         type="application/json" crossorigin="anonymous">
     <link rel="preload" href="https://lottie.host/dcc2ef95-baa4-4c58-bc6c-96cd7ad39738/Q5JyZC9T9T.json" as="fetch"
-        type="application/json" crossorigin="anonymous">
+        type="application/json" crossorigin="anonymous"> -->
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@2.1.0/dist/iconify-icon.min.js"></script>
 </head>
 
