--- a/index.html
+++ b/index.html
@@ -34,14 +34,26 @@
 
                     <div class="input_field_container">
                         <label for="phone">Phone Number</label>
-                        <input type="number" name="phone" id="phone" placeholder="Enter Your Phone Number here"
-                            value=9068062563>
+                        <input type="number" name="phone" id="phoneNumber" placeholder="Enter Your Phone Number here"
+                            value="9068062563" onclick="truecaller_push();" required>
                         <span class="input_desc">Without Country Code</span>
                         <small id="phone_error" class="error_message"></small>
                     </div>
                     <div class="input_field_container">
-                        <button type="submit" class="submit_btn r-flex ali-c jut-c gap-1">Get OTP<iconify-icon
-                                icon="ooui:arrow-next-ltr" height="14"></iconify-icon></button>
+                        <button type="submit" class="submit_btn r-flex ali-c jut-c gap-1" id="send_otp"
+                            onclick="check_number()">Get OTP<iconify-icon icon="ooui:arrow-next-ltr"
+                                height="14"></iconify-icon></button>
+                    </div>
+                    <div class="input_field_container">
+                        <label for="otp">OTP</label>
+                        <input type="number" name="otp" id="otpInput" placeholder="Enter 4 Digit OTP here" min="1000"
+                            max="9999" maxlength="4" class="input_styling" required>
+                        <span class="input_desc" id="resultMessage" class="hideit response">Without Country Code</span>
+                        <small id="otp_error" class="error_message"></small>
+                    </div>
+                    <div class="input_field_container">
+                        <button class="submit_btn r-flex ali-c jut-c gap-1" onclick="getOTP()">Get
+                            OTP<iconify-icon icon="ooui:arrow-next-ltr" height="14"></iconify-icon></button>
                     </div>
                 </form>
             </div>
@@ -77,6 +89,258 @@
 
 <script>
 
+    function sendOTP() {
+        var phoneNumber = document.getElementById("phoneNumber").value;
+        document.getElementById("phoneNumber").disabled = true;
+        document.getElementById("send_otp").classList.add("hideit");
+        document.getElementById("otp_section").classList.remove("hideit");
+
+        fetch("/php/send_otp.php", {
+            method: "POST",
+            body: JSON.stringify({ phoneNumber: phoneNumber }),
+            headers: {
+                "Content-Type": "application/json",
+            },
+        })
+            .then((response) => response.json())
+            .then((data) => {
+                console.log(data); // Log the response from the server
+            })
+            .catch((error) => console.error("Error:", error));
+    }
+
+    function getOTP() {
+        var enteredOTP = document.getElementById("otpInput").value;
+
+        var otpPattern = /^\d{4}$/;
+        if (!otpPattern.test(enteredOTP)) {
+            alert("Please enter a valid otp"); // Display error message
+        } else {
+            fetch("/php/verify_otp.php", {
+                method: "POST",
+                body: JSON.stringify({ otp: enteredOTP }),
+                headers: {
+                    "Content-Type": "application/json",
+                },
+            })
+                .then((response) => response.json())
+                .then((data) => {
+                    console.log("Response from server:", data); // Log response data for debugging
+
+                    if (
+                        data.hasOwnProperty("message") &&
+                        data.message === "OTP Verified successfully!"
+                    ) {
+                        console.log(
+                            "OTP verification successful. Redirecting to logged-in page..."
+                        );
+                        window.location.href = "user.php";
+                    } else {
+                        // If OTP verification fails, display an error message to the user
+                        document.getElementById("resultMessage").innerText = data.message;
+                        document.getElementById("resultMessage").classList.remove("hideit");
+                    }
+                })
+                .catch((error) => console.error("Error:", error));
+        }
+    }
+
+    function check_number() {
+        var phoneNumber = document.getElementById("phoneNumber").value;
+        // Regular expression to validate phone number format (E.164 format)
+        var phoneNumberPattern = /^\d{10}$/;
+
+        if (phoneNumberPattern.test(phoneNumber)) {
+            sendOTP(); // If phone number format is correct, proceed to send OTP
+        } else {
+            alert("Please enter a valid phone number"); // Display error message
+        }
+    }
+</script>
+<script>
+    let truecaller_request_id = null; // Initialize as null
+    let isSuccess = false; // Global success flag
+    let retryCount = 0; // Retry attempt counter
+    let pushed_truecaller = false;
+    function try_truecaller_login() {
+        const partnerName = "Imeals";
+        const privacyUrl = "https://imeals.in/privacy-policy";
+        const termsUrl = "https://imeals.in/terms";
+        const loginPrefix = "proceed";
+        const loginSuffix = "verifymobile";
+        const ctaPrefix = "proceedwith";
+        const ctaColor = encodeURIComponent("default");
+        const ctaTextColor = encodeURIComponent("default");
+        const btnShape = "round";
+        const skipOption = "manualdetails";
+        const ttl = 60000;
+        const randomid = Math.floor(Math.random() * 1000000);
+        truecaller_request_id = randomid + Date.now(); // Set global request ID
+        // document.getElementById("request_id").innerHTML = truecaller_request_id;
+        // Properly formatted URL
+        window.location = `truecallersdk://truesdk/web_verify?type=btmsheet&requestNonce=${truecaller_request_id}&partnerKey=Wxruhf8a1644c5276496993024a726dc506f1&partnerName=${partnerName}&lang=en&privacyUrl=${privacyUrl}&termsUrl=${termsUrl}&loginPrefix=${loginPrefix}&loginSuffix=${loginSuffix}&ctaPrefix=${ctaPrefix}&ctaColor=${ctaColor}&ctaTextColor=${ctaTextColor}&btnShape=${btnShape}&skipOption=${skipOption}&ttl=${ttl}`;
+        setTimeout(function () {
+            if (document.hasFocus()) {
+                // Truecaller app not present on the device and you redirect the user
+                // to your alternate verification page
+            } else {
+                page_loading(true);
+                // Add an event listener to the window for the 'focus' event
+                window.addEventListener("focus", function () {
+                    get_truecaller_response();
+                });
+            }
+        }, 600);
+    }
+
+    // Add event listener to the button
+    function get_truecaller_response() {
+        if (truecaller_request_id) {
+            page_loading(true);
+            // Make a POST request to the PHP endpoint to fetch user info
+            fetch("https://imeals.in/truecaller/get_response.php", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                    truecaller_request_id,
+                }),
+            })
+                .then((response) => response.json())
+                .then((data) => {
+                    if (data.status === "ok") {
+                        // Display the user info in HTML
+                        isSuccess = true;
+
+                        const userInfo = data.data.userInfo;
+
+                        // Prepare HTML output
+                        let htmlContent = `<p>${JSON.stringify(data.data, null, 2)}</p>
+  `;
+                        // Inject the HTML content into the userInfo div
+                        // document.getElementById(
+                        //   "userInfo"
+                        // ).innerHTML = `<pre>${htmlContent}</pre>`;
+                        // Store data in localStorage
+                        localStorage.setItem("userInfoData", JSON.stringify(data.data));
+                        page_loading(false);
+                        window.location.href =
+                            "http://imeals.in/?utm_source=truecaller_login";
+                    } else {
+                        // Display error message
+                        retryRequest(retryCount + 1); // Call retryRequest
+                        // document.getElementById(
+                        //   "response"
+                        // ).innerHTML = `<p style="color: red;">Error: ${data.message}</p>`;
+                    }
+                })
+
+                .catch((error) => {
+                    console.error("Fetch error:", error);
+                    //   document.getElementById(
+                    //     "userInfo"
+                    //   ).innerHTML = `<p style="color: red;">Error: ${error}</p>`;
+                });
+            page_loading(false);
+        } else {
+            // Display an error if truecaller_request_id is empty
+            //   document.getElementById(
+            //     "userInfo"
+            //   ).innerHTML = `<p style="color: red;">Please enter a Request ID.</p>`;
+            //   page_loading(false);
+        }
+    }
+    function retryRequest(attempt) {
+        const maxAttempts = 30;
+        const interval = attempt <= 20 ? 3000 : attempt <= 25 ? 6000 : 60000;
+
+        if (attempt <= maxAttempts && !isSuccess) {
+            setTimeout(() => {
+                retryCount = attempt; // Update retry count
+                get_truecaller_response(); // Retry fetching response
+            }, interval);
+        }
+    }
+    function page_loading(isLoading) {
+        var loadingLayer = document.getElementById("loadingLayer");
+        if (isLoading) {
+            loadingLayer.style.display = "flex";
+        } else {
+            loadingLayer.style.display = "none";
+        }
+    }
+    function truecaller_push() {
+        if (!pushed_truecaller) {
+            // Check if the user is on a mobile device and using Android
+            var isAndroid = /Android/i.test(navigator.userAgent);
+
+            if (isAndroid) {
+                try_truecaller_login();
+                pushed_truecaller = true;
+            }
+        }
+    }
+</script>
+<script>
+    (function () {
+        let cookieEnabled = false;
+        let localStorageEnabled = false;
+        let sessionSupported = false;
+
+        // Check if cookies are supported
+        try {
+            document.cookie = "testcookie=1; max-age=60";
+            cookieEnabled = document.cookie.indexOf("testcookie=1") !== -1;
+        } catch (e) {
+            cookieEnabled = false;
+        }
+
+        // Check if localStorage is supported
+        try {
+            localStorage.setItem("testLS", "1");
+            localStorageEnabled = localStorage.getItem("testLS") === "1";
+        } catch (e) {
+            localStorageEnabled = false;
+        }
+
+        // Check if sessionStorage is supported
+        try {
+            sessionStorage.setItem("testSession", "1");
+            sessionSupported = sessionStorage.getItem("testSession") === "1";
+        } catch (e) {
+            sessionSupported = false;
+        }
+
+        // Run the check only if not already tested
+        try {
+            if (!localStorage.getItem("browserChecked")) {
+                if (!cookieEnabled || !localStorageEnabled || !sessionSupported) {
+                    alert(
+                        "Your browser doesn't fully support cookies, local storage, or session persistence. Some features may not work."
+                    );
+                }
+                localStorage.setItem("browserChecked", "true");
+            }
+        } catch (e) {
+            // If localStorage access fails, still alert the user
+            if (!cookieEnabled || !localStorageEnabled || !sessionSupported) {
+                alert(
+                    "Your browser doesn't fully support cookies, local storage, or session persistence. Some features may not work."
+                );
+            }
+        }
+    })();
+
+    // Get the URL parameters
+    const urlParams = new URLSearchParams(window.location.search);
+
+    // Check if the parameter 'response' equals 'Phone Not Found'
+    if (urlParams.get('show_response') === 'Phone Not Found') {
+        // Apply display: flex to the element with id #response_top_bar
+        document.getElementById('response_top_bar').style.display = 'flex';
+        document.body.classList.add("has-top-bar");
+    }
 
 </script>
 
