--- a/index.html
+++ b/index.html
@@ -21,9 +21,253 @@
         display: none;
     }
 </style>
+<style>
+    body {
+        background: #faf9ff;
+        padding: 10px;
+        font-family: "Inter", sans-serif;
+        font-optical-sizing: auto;
+        color: #313131;
+    }
+
+    .heading_box h2,
+    .heading_box p,
+    .heading_box svg {
+        margin: 2px auto;
+    }
+
+    .container {
+        max-width: 800px;
+        padding: 20px 0px;
+        width: 100%;
+        margin: 2px auto;
+    }
+
+    .heading_box {
+        padding: 20px;
+        text-align: center;
+        border-radius: 5px;
+        border: 1px solid #e5e5e5;
+        background: #fff;
+        margin: 0px auto;
+        display: flex;
+        /* Make the container a flexbox */
+        flex-direction: row;
+        /* Set the flex direction to column */
+        justify-content: center;
+    }
+
+    h2 {
+        color: #313131;
+        font-size: 24px;
+        font-weight: 700;
+    }
+
+    p {
+        color: #313131;
+        font-size: 14px;
+    }
+
+    .form_div {
+        margin-top: 60px;
+    }
+
+    .input_styling {
+        width: 100%;
+        padding: 18px;
+        font-size: 16px;
+        border: 1px solid #e5e5e5;
+        margin-top: 8px;
+        box-sizing: border-box;
+        /* Add this line */
+        border-radius: 5px;
+    }
+
+    input:focus {
+        outline-color: #2e069c;
+        /* This will change the color of the focus outline to blue when you click on an input field */
+    }
+
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+        /* Optional - removes the margin for Firefox */
+    }
+
+    .input_div label {
+        font-size: 16px;
+        font-weight: 700;
+    }
+
+    .input_div {
+        margin: 20px auto;
+    }
+
+    .button {
+        border-radius: 5px;
+        border: 1px solid #dfdfdf;
+        background: linear-gradient(90deg, #6078FE 0%, #2e069c 100%);
+        color: #f3f3f3;
+        font-weight: 600;
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .hideit {
+        display: none;
+    }
+
+    .cur {
+        cursor: pointer;
+    }
+
+    .response {
+        text-align: center;
+        font-size: 16px;
+        color: #353535;
+        font-weight: 500;
+    }
+
+    .lottieimg {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* height: 30vh; */
+        margin: 20px auto;
+        align-items: center;
+        width: 70%;
+
+    }
+
+    /* Full-page overlay style */
+    .loading-layer {
+        display: none;
+        position: fixed;
+        z-index: 9999;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.8);
+        justify-content: center;
+        align-items: center;
+    }
+
+    /* Loader animation style */
+    .loader {
+        border: 8px solid #f3f3f3;
+        /* Light grey */
+        border-top: 8px solid #3498db;
+        /* Blue */
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        animation: spin 2s linear infinite;
+    }
+
+    /* Loader animation */
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+
+    body.has-top-bar {
+        padding-top: 50px;
+    }
+</style>
+<style>
+    .top-bar {
+        width: 100%;
+        background: linear-gradient(90deg, #6078FE 0%, #2e069c 100%);
+        color: white;
+        padding: 15px;
+        text-align: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 1000;
+        font-family: Arial, sans-serif;
+        font-size: 18px;
+    }
+
+
+    /* Style for the rotating circle */
+    .circle {
+        width: 16px;
+        height: 16px;
+        border: 3px solid white;
+        border-radius: 50%;
+        border-top-color: transparent;
+        animation: spin 1.2s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
+        margin-right: 10px;
+    }
+
+    /* Keyframes for rotating animation */
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+
+    /* Style for the animated dots */
+    .dots::after {
+        content: " ";
+        animation: dots 1.5s ease-in-out infinite;
+    }
+
+    /* Keyframes for dots animation */
+    @keyframes dots {
+
+        0%,
+        20% {
+            content: "";
+        }
+
+        40% {
+            content: ".";
+        }
+
+        60% {
+            content: "..";
+        }
+
+        80%,
+        100% {
+            content: "...";
+        }
+    }
+
+    .response_top_bar {
+        background: rgb(212, 0, 0);
+        color: rgb(255, 255, 255);
+        font-weight: bolder;
+        font-size: 12px;
+    }
+</style>
 
 <body>
     <main>
+        <div class="top-bar" style="display: none;" on>
+            <div class="circle"></div>
+            <span id="message">Automatically Login in</span>
+            <span class="dots"></span>
+        </div>
+        <div class="top-bar response_top_bar" style="display:none;" id="response_top_bar">
+            <span id="message">No Customer Found With this Phone Number</span>
+        </div>
         <section class="full_section">
 
             <div class="page_info">
@@ -81,6 +325,11 @@
     <div style="margin: 40px auto;text-align: center;">
         <span id="request_id">Request Id</span> <br>
         <span id="userInfo">Response Here</span>
+        <p id="show_response" class="response">
+            <?php if (isset($_GET['show_response'])) {
+            echo $_GET['show_response'];
+          } ?>
+        </p>
     </div>
     <div id="overlay" class="overlay">
         <div class="overlay-content page_info">
@@ -95,7 +344,9 @@
             <span id="closeOverlay">Close</span>
         </div>
     </div>
-
+    <div id="loadingLayer" class="loading-layer">
+        <div class="loader"></div>
+    </div>
 </body>
 
 <script>
