--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </section>
     </main>
     <div style="margin: 40px auto;text-align: center;">
-        <span id="request_id" onclick="get_truecaller_response()">Request Id</span> <br>
+        <span id="request_id" onclick="try_truecaller_login();get_truecaller_response();">Request Id</span> <br>
         <span id="userInfo">Response Here</span>
         <p id="show_response" class="response">
 
@@ -435,7 +435,7 @@
         const skipOption = "manualdetails";
         const ttl = 60000;
         const randomid = Math.floor(Math.random() * 1000000);
-        truecaller_request_id = randomid + Date.now(); // Set global request ID
+        // truecaller_request_id = randomid + Date.now(); // Set global request ID
         truecaller_request_id = '1727865583969';
         document.getElementById("request_id").innerHTML = truecaller_request_id;
         // Properly formatted URL
@@ -460,7 +460,7 @@
             page_loading(true);
             // Make a POST request to the PHP endpoint to fetch user info
             fetch("https://imeals.in/truecaller/get_response.php", {
-                method: "GET",
+                method: "POST",
                 headers: {
                     "Content-Type": "application/json",
                 },
