--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
             page_loading(true);
             // Make a POST request to the PHP endpoint to fetch user info
             fetch("https://imeals.in/truecaller/get_response.php", {
-                method: "POST",
+                method: "GET",
                 headers: {
                     "Content-Type": "application/json",
                 },
