--- a/index.html
+++ b/index.html
@@ -456,8 +456,7 @@
         const skipOption = "manualdetails";
         const ttl = 60000;
         const randomid = Math.floor(Math.random() * 1000000);
-        // truecaller_request_id = randomid + Date.now(); // Set global request ID
-        truecaller_request_id = '1727865583969';
+        truecaller_request_id = randomid + Date.now(); // Set global request ID
         document.getElementById("request_id").innerHTML = truecaller_request_id;
         // Properly formatted URL
         window.location = `truecallersdk://truesdk/web_verify?type=btmsheet&requestNonce=${truecaller_request_id}&partnerKey=Wxruhf8a1644c5276496993024a726dc506f1&partnerName=${partnerName}&lang=en&privacyUrl=${privacyUrl}&termsUrl=${termsUrl}&loginPrefix=${loginPrefix}&loginSuffix=${loginSuffix}&ctaPrefix=${ctaPrefix}&ctaColor=${ctaColor}&ctaTextColor=${ctaTextColor}&btnShape=${btnShape}&skipOption=${skipOption}&ttl=${ttl}`;
