--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
 
     function trucaller_got_number() {
         show_bottom_popup('Getting Your Account..', 'Checking if you have an account with us...');
+        phoneNumber.value = phoneNumber;
     }
 
     function sendOTP() {
