--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             .then((response) => response.json())
             .then((data) => {
                 console.log(data); // Log the response from the server
-                alert(data);
+                alert(data.message);
             })
             .catch((error) => console.error("Error:", error));
     }
