--- a/index.html
+++ b/index.html
@@ -387,6 +387,13 @@
     function check_if_account() {
         var phoneNumber = localStorage.getItem("phoneNumber");
         var token = localStorage.getItem("token");
+
+        // Ensure phoneNumber and token are available
+        if (!phoneNumber || !token) {
+            alert("Phone number or token is missing.");
+            return;
+        }
+
         fetch("/php/check_account.php", {
             method: "POST",
             body: JSON.stringify({ phone: phoneNumber, token: token }),
@@ -394,20 +401,30 @@
                 "Content-Type": "application/json",
             },
         })
-            .then((response) => response.json())
+            .then((response) => {
+                if (!response.ok) {
+                    throw new Error("Network response was not ok " + response.statusText);
+                }
+                return response.json();
+            })
             .then((data) => {
                 console.log(data); // Log the response from the server
-                alert(data.message);
-                if (data.usertype == "existing") {
+                alert(data.message); // Show message received from server
+
+                if (data.usertype === "existing") {
                     account_found();
-                } else if (data.usertype == "new") {
+                } else if (data.usertype === "new") {
                     account_not_found();
+                } else {
+                    console.error("Unexpected usertype:", data.usertype);
                 }
-
             })
-            .catch((error) => console.error("Error:", error));
-
+            .catch((error) => {
+                console.error("Error:", error);
+                alert("There was a problem with the request.");
+            });
     }
+
     function sendOTP() {
         var phoneNumber = document.getElementById("phoneNumber").value;
         document.getElementById("phoneNumber").disabled = true;
