--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         overlay_btn('Create Account', window.location.href = "signup.php");
     }
     function check_if_account() {
-        var phoneNumber = localStorage.getItem("phoneNumber");
+        var phoneNumber = localStorage.getItem("phone");
         var token = localStorage.getItem("token");
 
         // Ensure phoneNumber and token are available
