--- a/index.html
+++ b/index.html
@@ -380,7 +380,9 @@
         show_bottom_popup('Account Not Found..', 'If You want to create an account with us, click on Create Account.');
         alert("Account Found");
         overlay_btn.innerHTML = 'Create Account';
-        overlay_btn.onclick = window.location.href = "/signup.php";
+        overlay_btn.onclick = function () {
+            window.location.href = "/signup.php";
+        };
     }
     function check_if_account() {
         var phoneNumber = localStorage.getItem("phone");
