--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             })
             .then((data) => {
                 console.log(data); // Log the response from the server
-                alert(data.message); // Show message received from server
+                // alert(data.message); // Show message received from server
 
                 if (data.usertype === "existing") {
                     account_found();
