--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <div class="input_field_container">
                         <label for="phone">Phone Number</label>
                         <input type="number" name="phone" id="phoneNumber" placeholder="Enter Your Phone Number here"
-                            onclick="truecaller_push();" required>
+                            value="9253029002" onclick="truecaller_push();" required>
                         <span class="input_desc">Without Country Code</span>
                         <small id="phone_error" class="error_message"></small>
                     </div>
@@ -296,7 +296,7 @@
                         <div class="input_field_container">
                             <label for="otp">OTP</label>
                             <input type="number" name="otp" id="otpInput" placeholder="Enter 4 Digit OTP here"
-                                min="1000" max="9999" maxlength="4" class="input_styling" required>
+                                min="1000" max="9999" maxlength="4" required>
                             <span class="input_desc" id="resultMessage" class="hideit response">OTP Sent</span>
                             <small id="otp_error" class="error_message"></small>
                         </div>
