--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
         })
             .then((response) => response.json())
             .then((data) => {
-                console.log(data); // Log the response from the server
+                console.log(data);
+                alert(data.message); // Log the response from the server
             })
             .catch((error) => console.error("Error:", error));
     }
