--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         document.getElementById("phoneNumber").disabled = true;
         document.getElementById("send_otp").classList.add("hideit");
         document.getElementById("otp_section").classList.remove("hideit");
-        fetch("/php/send_otp.php", {
+        fetch("https://momscanteen.imeals.in/php/send_otp.php", {
             method: "POST",
             body: JSON.stringify({ phoneNumber: phoneNumber }),
             headers: {
@@ -451,7 +451,7 @@
         if (!otpPattern.test(enteredOTP)) {
             alert("Please enter a valid otp"); // Display error message
         } else {
-            fetch("/php/verify_otp.php", {
+            fetch("https://momscanteen.imeals.in/php/verify_otp.php", {
                 method: "POST",
                 body: JSON.stringify({ otp: enteredOTP }),
                 headers: {
